<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="26dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                style="@style/Body17Medium"
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/instructions_title"
                app:layout_constraintEnd_toStartOf="@+id/btnClose"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageView
                android:id="@+id/btnClose"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:src="@drawable/ic_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                style="@style/Body15"
                android:id="@+id/name"
                android:layout_marginTop="8dp"
                android:text="@string/item_drugs_search"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                style="@style/Body15Medium"
                android:id="@+id/titleDescription"
                android:layout_marginTop="18dp"
                android:text="@string/instructions_description"
                app:layout_constraintTop_toBottomOf="@id/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                style="@style/Body15"
                android:id="@+id/description"
                android:layout_marginTop="8dp"
                android:text="@string/item_instructions_description"
                app:layout_constraintTop_toBottomOf="@id/titleDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                style="@style/Body15Medium"
                android:id="@+id/titleActiveIngredients"
                android:layout_marginTop="18dp"
                android:text="@string/instructions_activeIngredients"
                app:layout_constraintTop_toBottomOf="@id/description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                style="@style/Body15"
                android:id="@+id/activeIngredients"
                android:layout_marginTop="8dp"
                android:text="@string/item_instructions_activeIngredients"
                app:layout_constraintTop_toBottomOf="@id/titleActiveIngredients"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                style="@style/Body15Medium"
                android:id="@+id/titleComposition"
                android:layout_marginTop="18dp"
                android:text="@string/instructions_composition"
                app:layout_constraintTop_toBottomOf="@id/activeIngredients"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                style="@style/Body15"
                android:id="@+id/composition"
                android:layout_marginTop="8dp"
                android:text="@string/item_instructions_composition"
                app:layout_constraintTop_toBottomOf="@id/titleComposition"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                style="@style/Body15Medium"
                android:id="@+id/titleIndications"
                android:layout_marginTop="18dp"
                android:text="@string/instructions_indications"
                app:layout_constraintTop_toBottomOf="@id/composition"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                style="@style/Body15"
                android:id="@+id/indications"
                android:layout_marginTop="8dp"
                android:text="@string/item_instructions_indications"
                app:layout_constraintTop_toBottomOf="@id/titleIndications"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                style="@style/Body15Medium"
                android:id="@+id/titleContraindications"
                android:layout_marginTop="18dp"
                android:text="@string/instructions_contraindications"
                app:layout_constraintTop_toBottomOf="@id/indications"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                style="@style/Body15"
                android:id="@+id/contraindications"
                android:layout_marginTop="8dp"
                android:text="@string/item_instructions_contraindications"
                app:layout_constraintTop_toBottomOf="@id/titleContraindications"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                style="@style/Body15Medium"
                android:id="@+id/titleSideEffects"
                android:layout_marginTop="18dp"
                android:text="@string/instructions_sideEffects"
                app:layout_constraintTop_toBottomOf="@id/contraindications"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                style="@style/Body15"
                android:id="@+id/sideEffects"
                android:layout_marginTop="8dp"
                android:text="@string/item_instructions_sideEffects"
                app:layout_constraintTop_toBottomOf="@id/titleSideEffects"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                style="@style/Body15Medium"
                android:id="@+id/titleOverdose"
                android:layout_marginTop="18dp"
                android:text="@string/instructions_overdose"
                app:layout_constraintTop_toBottomOf="@id/sideEffects"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                style="@style/Body15"
                android:id="@+id/overdose"
                android:layout_marginTop="8dp"
                android:text="@string/item_instructions_overdose"
                app:layout_constraintTop_toBottomOf="@id/titleOverdose"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                style="@style/Body15Medium"
                android:id="@+id/titleStorageConditions"
                android:layout_marginTop="18dp"
                android:text="@string/instructions_storageConditions"
                app:layout_constraintTop_toBottomOf="@id/overdose"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                style="@style/Body15"
                android:id="@+id/storageConditions"
                android:layout_marginTop="8dp"
                android:text="@string/item_instructions_storageConditions"
                app:layout_constraintTop_toBottomOf="@id/titleStorageConditions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                style="@style/Body15Medium"
                android:id="@+id/titlePrescriptionRequirements"
                android:layout_marginTop="18dp"
                android:text="@string/instructions_prescriptionRequirements"
                app:layout_constraintTop_toBottomOf="@id/storageConditions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                style="@style/Body15"
                android:id="@+id/prescriptionRequirements"
                android:layout_marginTop="8dp"
                android:text="@string/item_instructions_prescriptionRequirements"
                app:layout_constraintTop_toBottomOf="@id/titlePrescriptionRequirements"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_marginTop="18dp"
                android:background="@color/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prescriptionRequirements" />
            <TextView
                style="@style/Body15Medium"
                android:id="@+id/titlePrice"
                android:layout_marginTop="18dp"
                android:text="@string/instructions_price"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                style="@style/Body15"
                android:id="@+id/price"
                android:layout_marginTop="8dp"
                android:text="@string/item_instructions_price"
                app:layout_constraintTop_toBottomOf="@id/titlePrice"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                style="@style/Body15Medium"
                android:id="@+id/titleAnalog"
                android:layout_marginTop="18dp"
                android:text="@string/instructions_analog"
                app:layout_constraintTop_toBottomOf="@id/price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                style="@style/Body15"
                android:id="@+id/analog"
                android:layout_marginTop="8dp"
                android:text="@string/item_instructions_analog"
                app:layout_constraintTop_toBottomOf="@id/titleAnalog"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>