<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".pages.WeightFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:id="@+id/layoutBtnBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:id="@+id/btnBack"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_arrow_back" />
                <TextView
                    style="@style/Header2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/diary_weight_title" />
            </LinearLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutBtnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="26dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutBtnBack">
                <TextView
                    android:id="@+id/subtitle1"
                    style="@style/Header1"
                    android:text="@string/diary_weight_subtitle1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <EditText
                    android:id="@+id/editValue"
                    style="@style/EditText"
                    android:layout_marginTop="18dp"
                    android:hint="@string/diary_weight_editUnit"
                    android:inputType="date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/subtitle1" />
                <Button
                    android:id="@+id/btnAdd"
                    style="@style/Button"
                    android:text="@string/diary_weight_btnAdd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editValue" />
                <TextView
                    android:id="@+id/subtitle2"
                    style="@style/Header1"
                    android:layout_marginTop="36dp"
                    android:text="@string/diary_weight_subtitle2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnAdd" />
                <TextView
                    android:id="@+id/description"
                    style="@style/Body15"
                    android:layout_marginTop="18dp"
                    android:text="@string/diary_weight_description"
                    android:textColor="@color/text_hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/subtitle2" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutBtnAdd" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>